--- a/src/StoreAdministrationSystem.Admin.CLient/Shared/NavMenu.razor
+++ b/src/StoreAdministrationSystem.Admin.CLient/Shared/NavMenu.razor
@@ -1,5 +1,4 @@
 ﻿<MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Home</MudNavLink>
-    <MudNavLink Href="counter" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Counter</MudNavLink>
-    <MudNavLink Href="fetchdata" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Fetch data</MudNavLink>
+    <MudNavLink Href="/users" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Person">Пользователи</MudNavLink>
+    <MudDivider Class="my-2" />
 </MudNavMenu>
