--- a/src/StoreAdministrationSystem.Admin.CLient/_Imports.razor
+++ b/src/StoreAdministrationSystem.Admin.CLient/_Imports.razor
@@ -7,5 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using MudBlazor
-@using StoreAdministrationSystem.Admin.CLient
-@using StoreAdministrationSystem.Admin.CLient.Shared
+@using StoreAdministrationSystem.Admin.Client
+@using StoreAdministrationSystem.Admin.Client.Shared
